Makes it so shapes are drawn on layers, implements the show/hide layer checkbox

--- a/slate/templates/demo.html
+++ b/slate/templates/demo.html
@@ -37,6 +37,7 @@
 <script src="{{STATIC_URL}}js/autoshape.js"></script>
 <script src="{{STATIC_URL}}js/layers.js"></script>
 <script src="{{STATIC_URL}}js/drawing.js"></script>
+<script src="{{STATIC_URL}}js/shapes.js"></script>
 
 {% include "handlebars/layer/sidebar.html" %}
 
