Adds panning around the now infinite canvas

--- a/slate/templates/demo.html
+++ b/slate/templates/demo.html
@@ -11,7 +11,7 @@
 <div id="title">This is the title</div>
 <div id="sidebar">
     <div>
-        Actions - not active yet <br />
+        Actions<br />
         <input type="radio" name="board_actions" value="autoshape" checked="checked">Draw autoshape <br />
         <input type="radio" name="board_actions" value="rectangle">Draw rectangle <br />
         ... <br />
