--- a/slate/templates/demo.html
+++ b/slate/templates/demo.html
@@ -15,6 +15,7 @@
         <input type="radio" name="board_actions" value="autoshape" checked="checked">Draw autoshape <br />
         <input type="radio" name="board_actions" value="rectangle">Draw rectangle <br />
         ... <br />
+        <input type="radio" name="board_actions" value="select">Select an object<br />
         <input type="radio" name="board_actions" value="pan">Move around canvas<br />
 
 
@@ -37,6 +38,7 @@
 <script src="{{STATIC_URL}}js/autoshape.js"></script>
 <script src="{{STATIC_URL}}js/layers.js"></script>
 <script src="{{STATIC_URL}}js/drawing.js"></script>
+<script src="{{STATIC_URL}}js/select.js"></script>
 <script src="{{STATIC_URL}}js/shapes.js"></script>
 
 {% include "handlebars/layer/sidebar.html" %}
