Removing the debug border

--- a/slate/templates/demo.html
+++ b/slate/templates/demo.html
@@ -7,7 +7,7 @@
 
 <div id="canvas_container">
     <canvas id="artboard"></canvas>
-    <canvas id="draw_surface" style="border: 1px solid blue;" onclick="void(0)"></canvas>
+    <canvas id="draw_surface" onclick="void(0)"></canvas>
 </div>
 <div id="scroller"></div>
 <div id="title">This is the title</div>
