Makes the app drawable in ios devices.  probably a non-ideal viewport tag

--- a/slate/templates/demo.html
+++ b/slate/templates/demo.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
-<style>
-</style>
+<head>
+<meta name="viewport" content="initial-scale=0.08; user-scalable=no" />
 
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/tech.css"/>
+</head>
+<body>
 
 <div id="canvas_container">
     <canvas id="artboard"></canvas>
