Shows the cursors for resizing and moving.  Doesn't actually resize or move though

--- a/slate/templates/demo.html
+++ b/slate/templates/demo.html
@@ -48,6 +48,7 @@
 <script src="{{STATIC_URL}}js/drawing.js"></script>
 <script src="{{STATIC_URL}}js/select.js"></script>
 <script src="{{STATIC_URL}}js/shapes.js"></script>
+<script src="{{STATIC_URL}}js/events.js"></script>
 
 {% include "handlebars/layer/sidebar.html" %}
 </body>
