--- a/slate/templates/handlebars/layer/sidebar.html
+++ b/slate/templates/handlebars/layer/sidebar.html
@@ -3,6 +3,6 @@
     <div id="layer_sidebar_{{layer_id}}" class="layer_sidebar">
         <input type="checkbox" id="show_layer_{{layer_id}}" checked="checked" value="{{ layer_id }}">
         <canvas id="layer_preview_{{layer_id}}" width="100" height="100" class="layer_preview"></canvas>
-        <span id="layer_name_{{layer_id}}">Layer {{ layer_id }}</span>
+        <span id="layer_name_{{layer_id}}">{{ name }}</span>
     </div>
     {% endtplhandlebars %}
