Makes it so rest urls are based on the home url, instead of a relative path.  This'll give more url flexibility for the next step.  Also fixes layer names after the first add

--- a/slate/templates/artboard.html
+++ b/slate/templates/artboard.html
@@ -7,6 +7,7 @@
 
 <script>
     artboard_url_token = "{{ url_token }}";
+    slate_home = "{% url slate.views.home %}".replace(/\/$/, '');
 </script>
 
 </head>
