Makes it so the origin can be specified in the url

--- a/slate/templates/artboard.html
+++ b/slate/templates/artboard.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>Slate</title>
 <meta name="viewport" content="initial-scale=0.08, user-scalable=no" />
 
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/tech.css"/>
