Adding text size and color

--- a/slate/templates/artboard.html
+++ b/slate/templates/artboard.html
@@ -32,10 +32,18 @@
         <Br />
         <label>Border color: <input type="text" name="shape_border_color" value="black"/></label>
         <br />
-        <label>Fill color: <input type="text" name="shape_fill_color" value="black"/></label>
+        <label>Fill color: <input type="text" name="shape_fill_color" value="rgba(255, 255, 0, .1)"/></label>
     </div>
     <div id="text_controls">
     Text controls:
+        <br />
+        Size:
+            <br /><label><input type="radio" name="text_font_size" value="12">Small</label>
+            <br /><label><input type="radio" name="text_font_size" value="24" checked="checked">Medium</label>
+            <br /><label><input type="radio" name="text_font_size" value="48">Large</label>
+
+            <br/>
+            <label>Color: <input type="text" name="text_color" value="black"/></label>
     </div>
 </div>
 
