--- a/slate/static/css/tech.css
+++ b/slate/static/css/tech.css
@@ -3,6 +3,25 @@ This file is a place for engineers to put things in that help them.
 As elements from here are styled properly, these styles can go away.
 */
 
+#shape_controls {
+    position: absolute;
+    display: none;
+    background: white;
+    border: 2px solid black;
+}
+
+
+#text_controls {
+    position: absolute;
+    display: none;
+    background: white;
+    border: 2px solid black;
+}
+
+.new_content_attributes_panel {
+    top: 0px;
+    right: 300px;
+}
 
 #title { position: fixed; top: 0px; left: 0px; width: 100%; height: 40px; }
 #sidebar { position: fixed; top: 0px; right: 0px; width: 200px; height: 100%; }
