--- a/slate/templates/artboard.html
+++ b/slate/templates/artboard.html
@@ -83,6 +83,8 @@ Loading...
 <script src="{{STATIC_URL}}js/artboard.js"></script>
 <script src="{{STATIC_URL}}js/layers.js"></script>
 <script src="{{STATIC_URL}}js/drawing.js"></script>
+<script src="{{STATIC_URL}}js/move_shape.js"></script>
+<script src="{{STATIC_URL}}js/resize_shape.js"></script>
 <script src="{{STATIC_URL}}js/select.js"></script>
 <script src="{{STATIC_URL}}js/shapes.js"></script>
 <script src="{{STATIC_URL}}js/events.js"></script>
