Moving shape to module, moving shape specific actions to shape based files

--- a/slate/templates/artboard.html
+++ b/slate/templates/artboard.html
@@ -87,6 +87,12 @@ Loading...
 <script src="{{STATIC_URL}}js/resize_shape.js"></script>
 <script src="{{STATIC_URL}}js/select.js"></script>
 <script src="{{STATIC_URL}}js/shapes.js"></script>
+<script src="{{STATIC_URL}}js/shape/bezier.js"></script>
+<script src="{{STATIC_URL}}js/shape/polygon.js"></script>
+<script src="{{STATIC_URL}}js/shape/circle.js"></script>
+<script src="{{STATIC_URL}}js/shape/line.js"></script>
+<script src="{{STATIC_URL}}js/shape/text.js"></script>
+
 <script src="{{STATIC_URL}}js/events.js"></script>
 <script src="{{STATIC_URL}}js/attributes.js"></script>
 
