Adds shape deletion functionality

--- a/slate/templates/artboard.html
+++ b/slate/templates/artboard.html
@@ -32,6 +32,8 @@ Shape controls:
     <label>Border color: <input type="text" name="shape_border_color" value="black"/></label>
     <br />
     <label>Fill color: <input type="text" name="shape_fill_color" value="rgba(255, 255, 0, .1)"/></label>
+    <br />
+    <button name="delete_shape">Delete Shape</button>
 </div>
 <div id="text_controls">
 Text controls:
