--- a/slate/templates/artboard.html
+++ b/slate/templates/artboard.html
@@ -8,7 +8,7 @@
 
 <script>
     artboard_url_token = "{{ url_token }}";
-    slate_home = "{% url slate.views.home %}".replace(/\/$/, '');
+    slate_home = "{% url 'slate.views.home' %}".replace(/\/$/, '');
 </script>
 
 </head>
