Moving from STATIC_URL to {% static ... %}

--- a/slate/templates/artboard.html
+++ b/slate/templates/artboard.html
@@ -4,7 +4,8 @@
 <title>Slate</title>
 <meta name="viewport" content="initial-scale=0.08, user-scalable=no" />
 
-<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/tech.css"/>
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/tech.css' %}"/>
 
 <script>
     artboard_url_token = "{{ url_token }}";
@@ -77,26 +78,26 @@ Loading...
 <!-- this span is for testing string lengths -->
 <span id="offscreen_text_test" style="visibility: hidden">TEST</span>
 
-<script src="{{STATIC_URL}}js/jquery-2.0.3.min.js"></script>
-<script src="{{STATIC_URL}}js/app.js"></script>
-<script src="{{STATIC_URL}}js/handlebars.js"></script>
-<script src="{{STATIC_URL}}js/handlebars_util.js"></script>
-<script src="{{STATIC_URL}}js/autoshape.js"></script>
-<script src="{{STATIC_URL}}js/artboard.js"></script>
-<script src="{{STATIC_URL}}js/layers.js"></script>
-<script src="{{STATIC_URL}}js/drawing.js"></script>
-<script src="{{STATIC_URL}}js/move_shape.js"></script>
-<script src="{{STATIC_URL}}js/resize_shape.js"></script>
-<script src="{{STATIC_URL}}js/select.js"></script>
-<script src="{{STATIC_URL}}js/shapes.js"></script>
-<script src="{{STATIC_URL}}js/shape/bezier.js"></script>
-<script src="{{STATIC_URL}}js/shape/polygon.js"></script>
-<script src="{{STATIC_URL}}js/shape/circle.js"></script>
-<script src="{{STATIC_URL}}js/shape/line.js"></script>
-<script src="{{STATIC_URL}}js/shape/text.js"></script>
+<script src="{% static 'js/jquery-2.0.3.min.js' %}"></script>
+<script src="{% static 'js/app.js' %}"></script>
+<script src="{% static 'js/handlebars.js' %}"></script>
+<script src="{% static 'js/handlebars_util.js' %}"></script>
+<script src="{% static 'js/autoshape.js' %}"></script>
+<script src="{% static 'js/artboard.js' %}"></script>
+<script src="{% static 'js/layers.js' %}"></script>
+<script src="{% static 'js/drawing.js' %}"></script>
+<script src="{% static 'js/move_shape.js' %}"></script>
+<script src="{% static 'js/resize_shape.js' %}"></script>
+<script src="{% static 'js/select.js' %}"></script>
+<script src="{% static 'js/shapes.js' %}"></script>
+<script src="{% static 'js/shape/bezier.js' %}"></script>
+<script src="{% static 'js/shape/polygon.js' %}"></script>
+<script src="{% static 'js/shape/circle.js' %}"></script>
+<script src="{% static 'js/shape/line.js' %}"></script>
+<script src="{% static 'js/shape/text.js' %}"></script>
 
-<script src="{{STATIC_URL}}js/events.js"></script>
-<script src="{{STATIC_URL}}js/attributes.js"></script>
+<script src="{% static 'js/events.js' %}"></script>
+<script src="{% static 'js/attributes.js' %}"></script>
 
 {% include "handlebars/layer/sidebar.html" %}
 </body>
