Adds rotating polygons

--- a/slate/templates/artboard.html
+++ b/slate/templates/artboard.html
@@ -87,6 +87,7 @@ Loading...
 <script src="{% static 'js/layers.js' %}"></script>
 <script src="{% static 'js/drawing.js' %}"></script>
 <script src="{% static 'js/move_shape.js' %}"></script>
+<script src="{% static 'js/rotate_shape.js' %}"></script>
 <script src="{% static 'js/resize_shape.js' %}"></script>
 <script src="{% static 'js/select.js' %}"></script>
 <script src="{% static 'js/shapes.js' %}"></script>
