--- a/slate/static/css/tech.css
+++ b/slate/static/css/tech.css
@@ -36,3 +36,4 @@ As elements from here are styled properly, these styles can go away.
 #artboard { position: absolute; left: 0px; top: 0px; }
 #draw_surface { position: absolute; left: 0px; top: 0px;  }
 
+.rename_layer {display: none;}
