committing custom less css files and updated templates

--- a/slate/templates/artboard.html
+++ b/slate/templates/artboard.html
@@ -1,26 +1,14 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>Slate</title>
-<meta name="viewport" content="initial-scale=0.08, user-scalable=no" />
+{% extends "base_slate.html" %}
 
-{% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/tech.css' %}"/>
+{% block content %}
 
-<script>
-    artboard_url_token = "{{ url_token }}";
-    slate_home = "{% url 'slate.views.home' %}".replace(/\/$/, '');
-</script>
-
-</head>
-<body>
 {% csrf_token %}
 <div id="canvas_container">
     <canvas id="artboard"></canvas>
     <canvas id="draw_surface" onclick="void(0)"></canvas>
 </div>
 
-<div id="title">This is the title -- {{ name }}</div>
+<div id="title">{{ name }}</div>
 <div id="shape_controls">
 Shape controls:
     <br />
@@ -63,7 +51,7 @@ Text controls:
     
     <div id="layers_sidebar">
         Layers
-        <button id="add_layer">Add Layer</button>
+        <button id="add_layer">Add Layer</button>        
         <div id="layers_sidebar_sortable">
         </div>
     </div>
@@ -79,29 +67,5 @@ Loading...
 <!-- this span is for testing string lengths -->
 <span id="offscreen_text_test" style="visibility: hidden">TEST</span>
 
-<script src="{% static 'js/jquery-2.0.3.min.js' %}"></script>
-<script src="{% static 'js/jquery-ui-1.10.3.custom.min.js' %}"></script>
-<script src="{% static 'js/app.js' %}"></script>
-<script src="{% static 'js/handlebars.js' %}"></script>
-<script src="{% static 'js/handlebars_util.js' %}"></script>
-<script src="{% static 'js/autoshape.js' %}"></script>
-<script src="{% static 'js/artboard.js' %}"></script>
-<script src="{% static 'js/layers.js' %}"></script>
-<script src="{% static 'js/drawing.js' %}"></script>
-<script src="{% static 'js/move_shape.js' %}"></script>
-<script src="{% static 'js/rotate_shape.js' %}"></script>
-<script src="{% static 'js/resize_shape.js' %}"></script>
-<script src="{% static 'js/select.js' %}"></script>
-<script src="{% static 'js/shapes.js' %}"></script>
-<script src="{% static 'js/shape/bezier.js' %}"></script>
-<script src="{% static 'js/shape/polygon.js' %}"></script>
-<script src="{% static 'js/shape/circle.js' %}"></script>
-<script src="{% static 'js/shape/line.js' %}"></script>
-<script src="{% static 'js/shape/text.js' %}"></script>
 
-<script src="{% static 'js/events.js' %}"></script>
-<script src="{% static 'js/attributes.js' %}"></script>
-
-{% include "handlebars/layer/sidebar.html" %}
-</body>
-</html>
+{% endblock content %}
