--- a/slate/templates/create.html
+++ b/slate/templates/create.html
@@ -1,3 +1,7 @@
+{% extends "base_slate.html" %}
+
+{% block content %}
+
 <h1>Make a whiteboard</h1>
 <form action="{% url 'slate.views.create_whiteboard' %}" method="POST">
     {% csrf_token %}
@@ -5,3 +9,6 @@
     <br />
     <input type="submit" value="make it" />
 </form>
+
+
+{% endblock content %}
