--- a/slate/static/less/slate-variables.less
+++ b/slate/static/less/slate-variables.less
@@ -4,5 +4,7 @@
 Slate Specific LESS Variables
 =================================================================== */
 
-@slate-font-size-h1:          16px;
+@font-size-base:          	  14px;
+@slate-font-size-h1:          ceil(@font-size-base * 1.70); // ~24px
+@slate-font-size-h2:		  ceil(@font-size-base * 1.25); // ~18px
 @brand-slate:				  #39275B;
