--- a/slate/static/less/slate.less
+++ b/slate/static/less/slate.less
@@ -17,3 +17,85 @@ span.modified-meta {font-size:@font-size-small;font-style: italic;color:@gray-li
 header {
 	h1 {margin: 0 5px;font-size:@slate-font-size-h1;color:@brand-slate;}
 	}
+	
+#title h1 {margin-top:0; font-size:@slate-font-size-h1; /*ceil(@font-size-base * 1.70)*/}
+
+.new_content_attributes_panel {
+    top: 0px;
+    left: 300px;
+}
+
+#title { position: fixed; top: 0px; left: 5px; width: 100%; height: 40px; }
+#sidebar { position: fixed; top: 40px; left: 5px; width: 150px; height: 100%; }
+
+#canvas_container { position: absolute; top: 0px; left: 0px; right: 0px; bottom: 0px; }
+
+.layer_sidebar { 
+border: 1px solid #eee;padding:5px;
+}
+.delete-layer {color:@brand-danger;text-decoration:none;}
+
+//.btn-group-vertical .btn {border-radius:0px;}
+
+.new_layer {padding: 5px;}
+
+#layers_header {h2 {font-size:@slate-font-size-h2; padding:0 5px;margin-top:10px} height:40px; background-color:#bbb;margin-top:10px;}
+
+.layer_sidebar.selected { background: #DDD; }
+.layer_sidebar span {vertical-align: top;display: block;padding:0 5px;}
+
+.layer_preview { border: 1px solid black; }
+
+.icon-smaller:before {
+  vertical-align: -10%;
+  font-size: 3/4em;
+}
+
+.layer-lock {
+
+label {
+display: block;
+}
+
+.icon-lock:before { content: "\f09c"; }
+
+input[type=checkbox] {
+	//display:none;
+   position: absolute;
+   overflow: hidden; 
+  clip: rect(0 0 0 0); 
+  height: 1px; width: 1px; 
+  margin: -1px; padding: 0; border: 0;
+   //top: -9999px;
+   //left: -9999px;
+   }
+input[type=checkbox]:checked + span {
+    font-style:normal; 
+    .icon-lock:before { content: "\f023"; }
+}
+}
+
+/*.layer-hide {
+
+label {
+display: block;
+}
+
+.icon-eye-open:before { content: "\f06e"; }
+
+input[type=checkbox] {
+	//display:none;
+   position: absolute;
+   overflow: hidden; 
+  clip: rect(0 0 0 0); 
+  height: 1px; width: 1px; 
+  margin: -1px; padding: 0; border: 0;
+   //top: -9999px;
+   //left: -9999px;
+   }
+input[type=checkbox]:checked + span {
+    font-style:normal; 
+    .icon-eye-open:before { content: "\f070"; }
+}
+}*/
+
