--- a/slate/templates/handlebars/layer/sidebar.html
+++ b/slate/templates/handlebars/layer/sidebar.html
@@ -1,14 +1,22 @@
 {% load templatetag_handlebars %}
     {% tplhandlebars "layer_sidebar" %}
     <div id="layer_sidebar_{{layer_id}}" class="layer_sidebar">
-        <input type="checkbox" id="show_layer_{{layer_id}}" checked="checked" value="{{ layer_id }}">
-        <canvas id="layer_preview_{{layer_id}}" width="100" height="100" class="layer_preview"></canvas>
-        <span id="layer_name_{{layer_id}}">{{ name }}</span>
-        <form class="rename_layer">
-            <input type="text" name="rename_layer"/>
-            <input type="submit" value="rename" />
-        </form>
-        <label>Lock/Unlock:</label> <input id="lock_layer_{{layer_id}}" type="checkbox" {{ #if is_locked }} checked="checked"{{ /if }}/>
-        <button id="delete_layer_{{layer_id}}" value="{{ layer_id }}">Delete</button>
+		<div>
+			<span id="layer_name_{{layer_id}}">{{ name }}</span>
+	        <form class="rename_layer">
+	            <input type="text" name="rename_layer"/>
+	            <input type="submit" value="rename" />
+	        </form>
+		</div>
+		<canvas id="layer_preview_{{layer_id}}" width="100" height="100" class="layer_preview"></canvas>
+		<div class="layer-lock">
+	        <label><input id="lock_layer_{{layer_id}}" type="checkbox" value="1" {{ #if is_locked }} checked="checked"{{ /if }}/><span class="locked"><i aria-hidden="true" class="icon-lock icon-large"></i></span></label>
+	        <button type="button" id="delete_layer_{{layer_id}}" class="pull-right btn btn-xs" value="{{ layer_id }}"><i class="delete-layer icon-trash"></i></button>
+		</div>
+	    <div class="layer-hide">
+	        <label><input id="show_layer_{{layer_id}}" type="checkbox" checked="checked" value="{{ layer_id }}"><span class="hide"><i class="icon-eye-open icon-large"></i></span></label>
+		</div>
+	        
+		
     </div>
     {% endtplhandlebars %}
