--- a/slate/static/less/slate-variables.less
+++ b/slate/static/less/slate-variables.less
@@ -7,4 +7,5 @@ Slate Specific LESS Variables
 @font-size-base:          	  14px;
 @slate-font-size-h1:          ceil(@font-size-base * 1.70); // ~24px
 @slate-font-size-h2:		  ceil(@font-size-base * 1.25); // ~18px
+@slate-font-size-h3:		  ceil(@font-size-base * 0.95); // ~14px
 @brand-slate:				  #39275B;
