--- a/slate/static/css/slate.css
+++ b/slate/static/css/slate.css
@@ -1,4 +1,3 @@
-/* Slate LESS File */
 /* ===================================================================
 Import Bootstrap LESS and Site Specific LESS
 =================================================================== */
@@ -7505,6 +7504,7 @@ a .icon-flip-vertical:before {
 Slate Specific LESS Variables
 =================================================================== */
 /* app specific LESS variables - these override BS defaults  */
+/* Custom Slate LESS Styles and Overrides */
 li,
 ul li {
   list-style-type: none;
@@ -7533,14 +7533,14 @@ header h1 {
 }
 #title {
   position: fixed;
-  top: 0px;
+  top: 30px;
   left: 5px;
   width: 100%;
   height: 40px;
 }
 #sidebar {
   position: fixed;
-  top: 40px;
+  top: 70px;
   left: 5px;
   width: 150px;
   height: 100%;
@@ -7552,45 +7552,54 @@ header h1 {
   right: 0px;
   bottom: 0px;
 }
+/*********** Layer Sidebar **************/
 .layer_sidebar {
   border: 1px solid #eee;
   padding: 5px;
 }
-.delete-layer {
-  color: #d9534f;
-  text-decoration: none;
+.layer_sidebar h3 {
+  margin-top: 0;
+  font-size: 14px;
 }
-.new_layer {
+.layer_sidebar.selected {
+  background: #eee;
+}
+.new-layer {
   padding: 5px;
 }
+.new-layer-icon {
+  color: #ffffff;
+  text-decoration: none;
+}
 #layers_header {
-  height: 40px;
-  background-color: #bbb;
+  height: 35px;
+  background-color: #5bc0de;
   margin-top: 10px;
 }
 #layers_header h2 {
+  color: #ffffff;
   font-size: 18px;
+  font-weight: normal;
   padding: 0 5px;
   margin-top: 10px;
-}
-.layer_sidebar.selected {
-  background: #DDD;
-}
-.layer_sidebar span {
-  vertical-align: top;
-  display: block;
-  padding: 0 5px;
 }
 .layer_preview {
   border: 1px solid black;
 }
-.icon-smaller:before {
-  vertical-align: -10%;
-  font-size: 0.75em;
+.btn-group-vertical .btn {
+  border-radius: 0;
 }
-.layer-lock label {
-  display: block;
+.btn-group-vertical > .btn:first-child:not(:last-child) {
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
 }
+.btn-group-vertical > .btn:last-child:not(:first-child) {
+  border-bottom-left-radius: 0;
+  border-top-right-radius: 0;
+  border-top-left-radius: 0;
+}
+/****** Layer footer controls **********/
 .layer-lock .icon-lock:before {
   content: "\f09c";
 }
@@ -7610,26 +7619,52 @@ header h1 {
 .layer-lock input[type=checkbox]:checked + span .icon-lock:before {
   content: "\f023";
 }
-/*.layer-hide {
-
-label {
-display: block;
+.layer-hide .icon-eye-open:before {
+  content: "\f070";
 }
-
-.icon-eye-open:before { content: "\f06e"; }
-
-input[type=checkbox] {
-	//display:none;
-   position: absolute;
-   overflow: hidden; 
-  clip: rect(0 0 0 0); 
-  height: 1px; width: 1px; 
-  margin: -1px; padding: 0; border: 0;
-   //top: -9999px;
-   //left: -9999px;
-   }
-input[type=checkbox]:checked + span {
-    font-style:normal; 
-    .icon-eye-open:before { content: "\f070"; }
+.layer-hide input[type=checkbox] {
+  position: absolute;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  width: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
 }
-}*/
+.layer-hide input[type=checkbox]:checked + span {
+  font-style: normal;
+}
+.layer-hide input[type=checkbox]:checked + span .icon-eye-open:before {
+  content: "\f06e";
+}
+.layer-delete input[type=checkbox] {
+  position: absolute;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  width: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+}
+.delete-layer {
+  color: #d9534f;
+  text-decoration: none;
+}
+/***** Text controls *********/
+#text_controls {
+  background: transparent;
+  border: none;
+}
+.icon-smaller:before {
+  vertical-align: -10%;
+  font-size: 0.75em;
+}
+/***** Shape controls ********/
+#shape_controls {
+  position: absolute;
+  display: none;
+  background: transparent;
+  border: none;
+}
