--- a/slate/static/less/slate.less
+++ b/slate/static/less/slate.less
@@ -1,5 +1,4 @@
-/* Slate LESS File */
- 
+
 /* ===================================================================
 Import Bootstrap LESS and Site Specific LESS
 =================================================================== */
@@ -7,6 +6,8 @@ Import Bootstrap LESS and Site Specific LESS
 @import 'bootstrap.less'; /* Main BS compiled file */
 @import '../font-awesome/less/font-awesome.less'; /* font-awesome fonts */
 @import 'slate-variables.less'; /* app specific LESS variables - these override BS defaults  */
+
+/* Custom Slate LESS Styles and Overrides */
 
 li, ul li {list-style-type:none;}
 
@@ -25,37 +26,44 @@ header {
     left: 300px;
 }
 
-#title { position: fixed; top: 0px; left: 5px; width: 100%; height: 40px; }
-#sidebar { position: fixed; top: 40px; left: 5px; width: 150px; height: 100%; }
+#title { position: fixed; top: 30px; left: 5px; width: 100%; height: 40px; }
+#sidebar { position: fixed; top: 70px; left: 5px; width: 150px; height: 100%; }
 
 #canvas_container { position: absolute; top: 0px; left: 0px; right: 0px; bottom: 0px; }
 
+/*********** Layer Sidebar **************/
+
 .layer_sidebar { 
 border: 1px solid #eee;padding:5px;
+	h3 {margin-top:0;font-size:@slate-font-size-h3;}
 }
-.delete-layer {color:@brand-danger;text-decoration:none;}
 
-//.btn-group-vertical .btn {border-radius:0px;}
+.layer_sidebar.selected { background: #eee;}
 
-.new_layer {padding: 5px;}
+.new-layer {padding: 5px;}
+.new-layer-icon {color:@btn-info-color; text-decoration: none;}
 
-#layers_header {h2 {font-size:@slate-font-size-h2; padding:0 5px;margin-top:10px} height:40px; background-color:#bbb;margin-top:10px;}
-
-.layer_sidebar.selected { background: #DDD; }
-.layer_sidebar span {vertical-align: top;display: block;padding:0 5px;}
+#layers_header {h2 {color:@btn-info-color;font-size:@slate-font-size-h2; font-weight:normal; padding:0 5px;margin-top:10px} height:35px; background-color:@brand-info;margin-top:10px;}
 
 .layer_preview { border: 1px solid black; }
 
-.icon-smaller:before {
-  vertical-align: -10%;
-  font-size: 3/4em;
+.btn-group-vertical .btn {border-radius: 0;}
+
+.btn-group-vertical > .btn:first-child:not(:last-child) {
+border-top-right-radius: 0;
+border-bottom-right-radius: 0;
+border-bottom-left-radius: 0;
 }
 
-.layer-lock {
-
-label {
-display: block;
+.btn-group-vertical > .btn:last-child:not(:first-child) {
+border-bottom-left-radius: 0;
+border-top-right-radius: 0;
+border-top-left-radius: 0;
 }
+
+/****** Layer footer controls **********/
+
+.layer-lock { // lock icon toggle
 
 .icon-lock:before { content: "\f09c"; }
 
@@ -75,13 +83,9 @@ input[type=checkbox]:checked + span {
 }
 }
 
-/*.layer-hide {
+.layer-hide { // hide layer toggle
 
-label {
-display: block;
-}
-
-.icon-eye-open:before { content: "\f06e"; }
+.icon-eye-open:before { content: "\f070"; }
 
 input[type=checkbox] {
 	//display:none;
@@ -95,7 +99,46 @@ input[type=checkbox] {
    }
 input[type=checkbox]:checked + span {
     font-style:normal; 
-    .icon-eye-open:before { content: "\f070"; }
+    .icon-eye-open:before { content: "\f06e"; }
 }
-}*/
+}
+
+.layer-delete { // delete layer icon (hides checkbox)
+	
+	input[type=checkbox] {
+	//display:none;
+   position: absolute;
+   overflow: hidden; 
+  clip: rect(0 0 0 0); 
+  height: 1px; width: 1px; 
+  margin: -1px; padding: 0; border: 0;
+   //top: -9999px;
+   //left: -9999px;
+   }
+	
+}
+
+.delete-layer {color:@brand-danger;text-decoration:none;}
+
+
+/***** Text controls *********/
+
+#text_controls {
+    background: transparent;
+    border: none;
+}
+
+.icon-smaller:before {
+  vertical-align: -10%;
+  font-size: 3/4em;
+}
+
+/***** Shape controls ********/
+
+#shape_controls {
+    position: absolute;
+    display: none;
+    background: transparent;
+    border: none;
+}
 
